--- a/Library.Web/Library.Web.csproj
+++ b/Library.Web/Library.Web.csproj
@@ -5,6 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Extensions\Cart\**" />
+    <Content Remove="Extensions\Cart\**" />
+    <EmbeddedResource Remove="Extensions\Cart\**" />
+    <None Remove="Extensions\Cart\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Session" Version="2.0.0" />
   </ItemGroup>
@@ -15,10 +22,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Library\Library.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Extensions\Cart\" />
   </ItemGroup>
 
 </Project>
